<resources>
    <string name="app_name">What to watch</string>
    <string name="poster">main poster</string>
    <string name="popularity">Most popular</string>
    <string name="rated">Top rated</string>
    <string name="name_label">Movie title:</string>
    <string name="original_title_label">Original name:</string>
    <string name="rate">Rating:</string>
    <string name="release_date">Date of release:</string>
    <string name="description_label">Description:</string>
    <string name="icon_trailer">Icon for movie trailer</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="main">Main</string>
    <string name="favorite">Favorite</string>
    <string name="main_poster">main poster</string>
    <string name="favourite_star">favorite logo</string>
    <string name="title_activity_main_nav">MainActivityNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="detail_info">Detail info</string>
</resources>