<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_popularity">

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.mymovies.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_topRated"
        android:name="com.example.mymovies.ui.rated.TopRatedFragment"
        android:label="@string/rated"
        tools:layout="@layout/fragment_toprated" />

    <fragment
        android:id="@+id/nav_popularity"
        android:name="com.example.mymovies.ui.popularity.PopularityFragment"
        android:label="@string/popularity"
        tools:layout="@layout/fragment_popularity" />

    <fragment
        android:id="@+id/detail_fragment"
        android:name="com.example.mymovies.ui.detail.DetailFragment"
        android:label="@string/detail_info"
        tools:layout="@layout/detail_fragment"/>
</navigation>