<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        android:text="@string/name_label"
        android:textColor="@color/detail_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewFirstLine"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_margin="@dimen/sp8"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNameText" />

    <TextView
        android:id="@+id/textViewLabelOriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        android:text="@string/original_title_label"
        android:textColor="@color/detail_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewFirstLine" />

    <TextView
        android:id="@+id/textViewOriginalTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/viewFirstLine" />

    <View
        android:id="@+id/viewSecondLine"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_margin="@dimen/sp8"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOriginalTitleText" />

    <TextView
        android:id="@+id/textViewRatingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        android:text="@string/rate"
        android:textColor="@color/detail_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSecondLine" />

    <TextView
        android:id="@+id/textViewRatingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/viewSecondLine" />

    <View
        android:id="@+id/viewThirdLine"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_margin="@dimen/sp8"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRatingText" />

    <TextView
        android:id="@+id/textViewReleaseDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        android:text="@string/release_date"
        android:textColor="@color/detail_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewThirdLine" />

    <TextView
        android:id="@+id/textViewReleaseDataText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/viewThirdLine" />

    <View
        android:id="@+id/viewFourLine"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_margin="@dimen/sp8"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewReleaseDataText" />

    <TextView
        android:id="@+id/textViewGenreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        android:text="@string/genre"
        android:textColor="@color/detail_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewFourLine" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGenres"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGenreLabel" />

    <View
        android:id="@+id/viewSixLine"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_margin="@dimen/sp8"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewGenres" />

    <TextView
        android:id="@+id/textViewDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        android:text="@string/description_label"
        android:textColor="@color/detail_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSixLine" />

    <TextView
        android:id="@+id/textViewDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/sp8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionLabel" />

    <TextView
        android:id="@+id/textViewImagesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp8"
        android:text="@string/images"
        android:textColor="@color/detail_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescriptionText"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewImages"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewImagesLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/viewFiveLine"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_margin="@dimen/sp8"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewImages" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewTitleTrailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sp8"
        android:text="@string/trailers"
        android:textColor="@color/detail_trailers_review"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewTrailers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewFiveLine" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTrailers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleTrailer" />

    <TextView
        android:id="@+id/textViewTitleReviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sp8"
        android:text="@string/reviews"
        android:textColor="@color/detail_trailers_review"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewReviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleReviews" />

</androidx.constraintlayout.widget.ConstraintLayout>